Fix Footer and Bug Fixes
1) Footer would lay on top of calculator if window resized too small. This has been fixed so the footer resizes with the window instead of staying at an absolute position.  2) Bug Fix. When user would delete an operator during the first operation done, it would not let you add another operator. This has been fixed to no longer occur.  3) Bug fix. When user would delete only an operator, variable a would be revalued to an incorrect number. This has been fixed with an if statement, so that when a user only deletes an operator, the num and a variables hold their values.

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ body {
     font-family: sans-serif;
 }
 
+.main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .screenContainer {
     display: flex;
     flex-direction: column;
@@ -82,14 +89,9 @@ button:hover {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
     width: 100%;
-    padding: 10px;
     font-size: 20px;
 }
